--- a/css/chartshow.css
+++ b/css/chartshow.css
@@ -8,35 +8,48 @@ body {
     width: 0;
     height: 100%;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color: #ECF3F4;
     right: 0;
     bottom: 0;
     position: fixed;
-    /*z-index、top、left共同控制侧栏的悬浮（上方1，下方-1）*/
     z-index: 0;
     top: 0;
     left: 1;
-    transition: 0.5s; /*侧栏延迟0.5s显示*/
+    transition: 0.5s; 
     padding-top: 60px;
 }
 
 #charttitle{
     font-family: "Verdana", sans-serif;
     font-size: 25px;
+    color: #111;
+    margin-left: 20px;
+    
     /* transition: background-color .5s; */
 }
 
-/*侧栏标签和关闭按钮光标的效果*/
 #chartshow a:hover, .offcanvas a:focus{
-    color: #f1f1f1;
+    color: #fff;
 }
  
-/*侧边栏标签选择器*/
 #chartshow a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #111;
     display: block;
-    transition: 0.3s; /*标签延迟0.3s显示*/
+    transition: 0.3s; 
 }
+
+/* .axis path {
+    stroke: #e0dede;
+}
+.axis line {
+    stroke: #e0dede;
+} */
+/* text { 
+    fill: #e0dede;
+}
+.legend text.label {
+    fill: '#111'
+ } */
