--- a/css/styles.css
+++ b/css/styles.css
@@ -134,7 +134,7 @@
             border-radius: 4px;
             border: 0;
             box-shadow: none;
-            color: #fff;
+            color: rgb(255, 255, 255);
             cursor: pointer;
             display: inline-flex;
             font: 500 12px/20px 'Roboto';
@@ -164,6 +164,13 @@
 
         #js-pause-button {
             background: url('./pause.svg') no-repeat;
+            background-color: #1785FB;
+            background-position: center;
+        }
+
+        #export {
+            width: 80px;
+            height: 36px;
             background-color: #1785FB;
             background-position: center;
         }
